# andeskagent

./: .env  .gitignore  .mcp.json  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  TeknikajanEndpointAgent.spec  db.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  rustdestekenetgrasyon.md  start.bat
adapters/: agent_browser_adapter.py  desktop_adapter.py  file_adapter.py  gemini_adapter.py  mail_adapter.py  openclaude_adapter.py  openrouter_adapter.py  powershell_worker.py  script_adapter.py  system_adapter.py
cli/: __main__.py  main.py
config/: endpoint_agent.example.json  endpoint_agent.local.json  settings.json  whitelist.json
core/: auth.py  command_parser.py  config.py  errors.py  knowledge.py  logger.py  memory_store.py  session_state.py  workflows.py
docs/: README.md  admin-panel-wireframe.md  teknikajan-rustdesk-endpoint-plan.md  tenant-agent-api-contracts.md  tenant-agent-architecture.md  tenant-agent-platform.md
endpoint_agent/: __init__.py  __main__.py  client.py
knowledge/: issues.csv
mobile-cli/: app.js  index.html  style.css
scripts/: agent-browser-session.mjs  generate-script-library.ps1  manifest.json  ocr_reader.py  openrouter-smoke-test.py  pdf-link-extractor.mjs  perf_probe.py  ps_worker.ps1  render_qr.mjs  scenario_runner.py  send-mail-playwright.mjs
server/: .teknikajan.md  main.py
tests/: test_command_parser.py  test_command_route.py  test_desktop_adapter.py  test_endpoint_agent_client.py  test_endpoint_agent_packaging.py  test_endpoint_agents_route.py  test_script_adapter.py  test_workflows.py
(+42 files in other folders)
