[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teknikajan"
version = "0.1.0"
description = "Windows remote technical support agent infrastructure"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "typer>=0.12,<1.0",
  "rich>=13.9,<14.0",
  "requests>=2.32,<3.0",
  "psutil>=6.1,<7.0",
  "email-validator>=2.2,<3.0",
  "mcp[cli]>=1.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["server*", "cli*", "adapters*", "core*", "endpoint_agent*"]

[tool.pyrefly]
python-interpreter-path = ".venv/Scripts/python.exe"
site-package-path = [".venv/Lib/site-packages"]
ignore-missing-imports = ["mcp.*"]
